--- a/02-fission-te/fission-te.tex
+++ b/02-fission-te/fission-te.tex
@@ -73,17 +73,37 @@ $n+^{235}$U$\rightarrow ^{236}$U$^* \rightarrow A_1+A_2$, where $A_1 \approx A_2
 
 The stability of heavy nuclei against spontaneous fission is due to the potential energy barrier that must be overcome before the nucleus will fission. The size of this fission barrier is usually 6-9 MeV in most heavy nuclei of interest. The critical energy is the threshold necessary to be overcome in order for fission to occur.
 
+The energy required to break down a nucleus into its component nucleons is called the nuclear binding energy. We frequently look at the binding energy per nucleon. The larger the binding energy per nucleon, the greater the work that must be done to remove the nucleon from the nucleus, the more stable the nucleus. Important features of the graph:
+%https://www.miniphysics.com/binding-energy-per-nucleon-and-nuclear.html
+
+\begin{itemize}
+\item Excluding the lighter nuclei, the average binding energy per nucleon is about 8 MeV.
+The maximum binding energy per nucleon occurs at around mass number A = 50, and corresponds to the most stable nuclei. Iron nucleus Fe-56 is located close to the peak with a binding energy per nucleon value of approximately 8.8 MeV. It's one of the most stable nuclides that exist.
+\item Nuclei with very low or very high mass numbers have lesser binding energy per nucleon and are less stable because the lesser the binding energy per nucleon, the easier it is to separate the nucleus into its constituent nucleons.
+\item Nuclei with low mass numbers may undergo nuclear fusion, where light nuclei are joined together under certain conditions so that the final product may have a greater binding energy per nucleon.
+\item Nuclei with high mass numbers may undergo nuclear fission, where the nucleus split to give two daughter nuclei with the release of neutrons. The daughter nuclei will possess a greater binding energy per nucleon.
+\end{itemize}
+
+
+\begin{center}
+\includegraphics[scale=0.6]{../figs/nucleonbinding}
+\end{center}
+
+
 \textit{Fissile isotopes} are those that can fission from a neutron with low (in theory, zero) kinetic energy: $^{233}$U, $^{235}$U, $^{239}$Pu, and $^{241}$Pu. [It is relevant to mention thermal neutrons, with very small kinetic energies.] Fissile nuclides represent the principal fuels used in fission chain-reaction systems. 
 
 \textit{Fissionable isotopes} can undergo fission from high-energy neutrons; their critical energies are higher than those of fissile isotopes: $^{232}$Th, $^{238}$U, $^{240}$Pu. Fissionable nuclides are unable to sustain by themselves a stable fission reaction.
 
 \textit{Fertile isotopes} are those that create fissile isotopes upon neutron capture. Two examples:
-
+\ifeqns
 $^{238}\text{U}+n \stackrel{\gamma}{\rightarrow} \, ^{239}\text{U}\stackrel{\beta^-}{\rightarrow} \, ^{239}\text{Np}\stackrel{\beta^-}{\rightarrow} \, ^{239}\text{Pu}$
 
 $^{232}\text{Th}+n \stackrel{\gamma}{\rightarrow} \,^{233}\text{Th}\stackrel{\beta^-}{\rightarrow}\, ^{233}\text{Pa}\stackrel{\beta^-}{\rightarrow} \, ^{233}\text{U}$
+\else
+\vspace*{3 em}
+\fi
 
-Each fission of a parent atom produces a different set of fission product atoms, which also varies according the to energy of neutron inducing fission -- see \autoref{fig:fp-e} and \autoref{fig:fp-i}. However, while an individual fission is not predictable, the fission products are statistically predictable. The amount of any particular isotope produced per fission is called its yield, typically expressed as percent per parent fission.
+Each fission of a parent atom produces a different set of fission product atoms, which also varies according to the energy of neutron inducing fission -- see \autoref{fig:fp-e} and \autoref{fig:fp-i}. However, while an individual fission is not predictable, the fission products are statistically predictable. The amount of any particular isotope produced per fission is called its yield, typically expressed as percent per parent fission.
 
 \begin{figure}
 \centering
@@ -98,15 +118,18 @@ Each fission of a parent atom produces a different set of fission product atoms,
 \label{fig:fp-i}
 \end{figure}
 
+Most fission is asymmetric, with one fission product more massive than the other. In general, the higher the energy of the state that undergoes nuclear fission, the more likely that the two fission products have similar mass. Hence as the neutron energy increases and/or the energy of the fissile atom increases, the valley between the two peaks becomes more shallow.
 
-Most fission is asymmetric, with one fission product more massive than the other. In general the higher the energy of the state that undergoes nuclear fission, the more likely that the two fission products have similar mass. Hence as the neutron energy increases and/or the energy of the fissile atom increases, the valley between the two peaks becomes more shallow.
-
-$\nu=$average number of neutrons per fission. See \autoref{fig:nu} for examples, where $\nu^{49}$ is for $^{239}$Pu, $\nu^{25}$ is for $^{235}$U, $\nu^{23}$ is for $^{233}$U.
+We also care a lot about
+$\nu$, the average number of neutrons per fission. See \autoref{fig:nu} for examples, where $\nu^{49}$ is for $^{239}$Pu, $\nu^{25}$ is for $^{235}$U, $\nu^{23}$ is for $^{233}$U.
+\begin{figure}
 \begin{center}
 \includegraphics[scale=0.6]{../figs/nu}
-\caption{average \# of neutrons release per fission as a function of energy}
+\caption{average \# of neutrons released per fission as a function of energy}
 \label{fig:nu}
 \end{center}
+\end{figure}
+
 
 $\alpha = \frac{\sigma_\gamma}{\sigma_f}$ is the capture-to-fission ratio
 
@@ -127,17 +150,21 @@ Fission produces both prompt and delayed neutrons, where the delayed neutrons co
 
 The majority of the energy released in a fission event is in form of the kinetic energy of the fission products. For $^{235}$U fission:
 
+\ifeqns
 KE of FP $\approx 168$ MeV
 
 KE of $n\approx 5$ MeV
 
-prompt $\gamma$ $E\approx 7$ MeV
+prompt $\gamma$ E$\approx 7$ MeV
 
-$\beta^- E$ from FP decay $\approx 8$ MeV
+$\beta^- $ E from FP decay $\approx 8$ MeV
 
-$\gamma E$ from FP decay $\approx 7$ MeV
+$\gamma $ E from FP decay $\approx 7$ MeV
 
-neutrino $E$ from FP decay $\approx 12$ MeV
+neutrino E from FP decay $\approx 12$ MeV
+\else
+\vspace*{6 em}
+\fi
 
 All of the kinetic energy from the fission products and neutrons is considered recoverable. Most of the $\gamma$ energy and all of the $\beta^-$ energy is recoverable. None of the neutrino energy is recoverable. In total, $~207$ MeV is emitted and $~195$MeV is recoverable.
 
