now I have fission sorted out.

--- a/02-fission-te/fission.tex
+++ b/02-fission-te/fission.tex
@@ -2,7 +2,7 @@
 \usepackage[top=1in, bottom=1in, left=1in, right=1in]{geometry}
 
 \newif\ifeqns
-\eqnstrue
+%\eqnstrue
 
 \usepackage{setspace}
 \onehalfspacing
@@ -194,302 +194,6 @@ k_{eff} = P_{FNL}P_{TNL}\epsilon p f\eta
 \]
 
 We determine the state of criticality using $k$, with $k=1$ being critical (sustaining reaction), $k<1$ subcrictical (decreasing), and $k>1$ supercritical (increasing). We'll talk more about this later in class.
-
-\section*{Neutron Transport}
-
-At any time $t$ we use six variables to specify the
-position of any particle in phase space: three position variables denoted by the vector $\rvec$,
-the kinetic energy $E$, and a unit vector $\omvec$, which indicates the direction in which the
-particle is traveling. With these variables we can define the distribution function
-$N(\rvec,E,\omvec,t)$,
-such that
-\begin{align*}
-N(\rvec,E,\omvec,t)dVdEd\omvec = \begin{array}{l}
-\text{the number of particles in a differential volume}\vspace{-0.1 cm}\\
-\text{element $dV$ at spatial point $\rvec$, with energy in $dE$}\vspace{-0.1 cm}\\
-\text{about $E$, traveling in a solid angle element $d\omvec$}\vspace{-0.1 cm}\\
-\text{about $\omvec$, at time $t$.}
-\end{array}\label{nmbpart}
-\end{align*} 
-
-We will describe the phase space we'll use in class, using \autoref{fig:phase-space} for reference. Let the vector $\rvec$ be described by the Cartesian coordinates $x$, $y$, $z$, and the vector
-$\omvec$ be described by a polar angle $\theta$ measured with respect to the $z$-axis
- and a corresponding azimuthal angle $\varphi$ such that $(\Omega_x=\cos\varphi \sin\theta, \Omega_y = \sin\varphi \sin\theta, \Omega_z = \cos\theta)$.
-\begin{figure}%[t]\nonumber
-\centering
-\includegraphics[height=10 cm,width=10 cm]{../figs/fig2_1.jpg}
-\caption{Coordinate System of differential phase space.}
-\label{fig:phase-space}
-\end{figure}
- If we introduce $\mu = \cos\theta$, then
- \ifeqns
-\begin{align*}
-dV &= dxdydz\,,
-\\
-d\omvec &=  \sin\theta d\theta d\varphi = d\mu d\varphi\,. 
-\end{align*}
-\else
-\vspace*{3em}
-\fi
-Note that $d\omvec $ is not a vector, but a differential solid angle about the vector $\omvec$.
-%A minus sign was omitted since $\mu$ runs from
-%1 to -1 when $\theta$ runs from 0 to $\pi$.
-If $\vec{v}$ is the velocity vector, then $\omvec = \vec{v}/{|\vec{v}|}$,
-and
-it is easy to see that the components of the particle's velocity in the Cartesian
-coordinates are given by
-\begin{align*}
-\dot x &=  v\Omega_x\,,\\
-\dot y &=  v\Omega_y\,,\\
-\dot z &=  v\Omega_z\,,
-\end{align*}
- where $v$ is the particle's speed in the nonrelativistic case; that is, $v = \sqrt{2E/m_p}$, with $m_p$
-denoting the particle's mass.
-
-\subsection*{Integral approach to the transport equation}
-The thing we are frequently solving for is the angular neutron flux:
-\[
-\psi(\rvec, E, \omvec, t)=vN(\rvec, E, \omvec, t).
-\] 
-
-Let's go through many terms we'll use. 
-
-Consider a well-defined control volume $V$ and assume that $N(\rvec, E, \omvec, t)$ is known. How many neutrons are in $V$ with energy $E$ and direction $\omvec$?
-$\left[\int_V dV N(\rvec, E, \omvec, t)\right] dEd\omvec =$ \# of neutrons in $V$ with energy $E$ and direction $\omvec$
-
-$\frac{\partial}{\partial t}\left[\int_V dV N(\rvec, E, \omvec, t)\right] dEd\omvec =$ rate of change  = gain rate - loss rate
-
-Neutron gains come from a source (fission) or in-scattering $(E', \omvec' \rightarrow E, \omvec)$. Neutron losses come from collisions $(E, \omvec \rightarrow E', \omvec')$ and streaming.
-
-$\left[\int_V dV S(\rvec, E, \omvec, t)\right] dEd\omvec =$ internal source of neutrons.
-
-The double differential in-scattering cross section is expressed as $\Sigma_s(E'\rightarrow E, \omvec'\rightarrow\omvec)$.
-
-The entire scattering term is
-$\left[\int_VdV\int_0^{\infty}dE'\int_{4\pi}d\omvec'\Sigma_s(E'\rightarrow E,\omvec'\rightarrow\omvec)\psi(\rvec,E',\omvec',t)\right]dEd\Omega$
-
-The collision term is
-$\left[\int_VdV\Sigma_{t}(\rvec,E)\psi(\rvec,E,\omvec,t)\right]dEd\Omega$
-
-The streaming term is
-$\left[\int_VdV div \vec{j}(\rvec, E, \omvec,t)\right]dEd\Omega$ where $\vec{j}(\rvec,E,\omvec,t)=\psi(\rvec,E,\omvec,t)\omvec$
-
-Finally:
-\begin{align*}
-&\frac{\partial}{\partial t}\left[\int_V dV N(\rvec, E, \omvec, t)\right] dEd\omvec =
-\left[\int_V dV S(\rvec, E, \omvec, t)\right] dEd\omvec +
-\\& \hspace{1cm} \left[\int_VdV\int_0^{\infty}dE'\int_{4\pi}d\omvec'\Sigma_s(E'\rightarrow E,\omvec'\rightarrow\omvec)\psi(\rvec,E',\omvec',t)\right]dEd\Omega \,-
-\\& \hspace{2cm}\left[\int_VdV\Sigma_{t}(\rvec,E)\psi(\rvec,E,\omvec,t)\right]dEd\Omega - \left[\int_VdV div \vec{j}(\rvec, E, \omvec,t)\right]dEd\Omega
-\end{align*}
-
-\begin{align*}
-\frac{1}{v}\frac{\partial}{\partial t}\psi(\rvec, E, \omvec, t) &=
- S(\rvec, E, \omvec, t) +
- \int_0^{\infty}dE'\int_{4\pi}d\omvec'\Sigma_s(E'\rightarrow E,\omvec'\rightarrow\omvec)\psi(\rvec,E',\omvec',t) \,-
-\\& \hspace{1cm}\Sigma_{t}(\rvec,E)\psi(\rvec,E,\omvec,t) - div \vec{j}(\rvec, E, \omvec,t)
-\end{align*}
-
-Initial condition:
-\[
-\psi(\rvec, E, \omvec, 0) = \psi_0(\rvec, E,\omvec)
-\]
-
-Void boundary condition:
-\[
-\psi(\rvec_s, E, \omvec, t) = 0, \,\,\, \rvec_s \, \in \, \partial V \,\,\, \text{and} \,\,\, \omvec \cdot \vec{n} <0.
-\]
-
-\subsection*{Another approach to the transport equation}
-
-
-We consider a six-dimensional volume (as a six-dimensional cube)
- fixed in space, of dimensions
-$\triangle x$, $\triangle y$, $\triangle z$, $\triangle E$, $\triangle \mu$, $\triangle \overline\psi$.
-Then, the number of particles within this volume at time $t$ is
-\begin{equation*}
-N(\rvec,E,\omvec,t)\triangle x\triangle y\triangle z\triangle E\triangle \mu\triangle \overline\psi =
-N(\rvec,E,\omvec,t)\triangle \beta,
-\end{equation*}
-where all arguments of $N$ are ``average" arguments in the %volume $\triangle V$.
-increment of six-dimensional phase space $\triangle \beta$.
-The number of
-particles in this cube changes with time:
-\begin{equation*}
-\triangle \beta\frac{\partial}{\partial t}N(\rvec,E,\omvec,t) = \begin{array}{l}
-\text{time rate of change of the number of}\vspace{-0.1cm}\\
-\text{particles in the six-dimensional cube $\triangle \beta$.}
-\end{array}
-\end{equation*}
- This time rate of change is due to five separate processes. One is the rate of streaming of
-particles out of the volume through the boundaries. The others occur within the
-six-dimensional ``cube": the rate
-of absorption; the rate of scattering from $E$, $\omvec$ to all other energies and directions, known
-as outscattering; the rate of scattering into $E$, $\omvec$ from all other energies and
- directions, known as inscattering; and the rate of production of particles due to an internal source.
-
- Now, let us consider the surfaces of the cube perpendicular to the $x$-axis. For the net rate
-of particles leaving the cube through these two surfaces, we have
-\begin{equation*}
-(\textrm{Streaming})_x = \dot x N(\rvec,E,\omvec,t)\mid_x^{x+\triangle x}
-\triangle y\triangle z\triangle E\triangle \mu\triangle \overline\psi,
-\end{equation*}
- where $\dot x$ is the $x$ component of the particle velocity,
-and 
-$\triangle y\triangle z\triangle E\triangle\mu\triangle \overline\psi$ is the surface area. Letting $\triangle x$ go to
-the differential $dx$, we rewrite
-\begin{equation*}
-(\textrm{Streaming})_x = \triangle \beta \frac{\partial}{\partial x}\big[
-\dot x N(\rvec,E,\omvec,t)\big].
-\end{equation*}
- Using the same procedure for the flow from the cube in the other five ``directions", we obtain
-\begin{align*}
-\textrm{Streaming} =
-\bigg[ \frac{\partial}{\partial x}(\dot x N) + &
-\frac{\partial}{\partial y}(\dot y N) +\frac{\partial}{\partial z}(\dot z N) \\
-&\quad\quad + \frac{\partial}{\partial E}(\dot E N) + \frac{\partial}{\partial \mu}(\dot \mu N) +
-\frac{\partial}{\partial \overline{\psi}}(\dot \psi N)\bigg] \triangle \beta,
-\end{align*}
- where $N = N(\rvec,E,\omvec,t)$.
-
-
- The rate of absorption within the cube is the product of the number of particles in the cube
-and the probability of absorption per particle per unit of time. This probability is given by
-the product of the absorption cross section and the particle speed $v$. That is,
-\begin{equation*}
-\textrm{Absorption} = v\Sigma_a(\rvec,E)N(\rvec ,E,\omvec,t)\triangle \beta.
-\end{equation*}
- Using similar arguments and the fact that we need to sum the scattering from (to) $E$,
-$\omvec$ to (from) all other energies and directions $E'$, $\omvec'$, we find
-\begin{align*}
-\textrm{Outscattering} &= \triangle \beta \int_0^{\infty}\int_{4\pi}
-v\Sigma_s(\rvec,E\rightarrow E', \omvec\rightarrow\omvec')N(\rvec,E,\omvec,t)d\omvec'dE', \\
-\textrm{Inscattering} &= \triangle \beta \int_0^{\infty}\int_{4\pi}
-v'\Sigma_s(\rvec,E'\rightarrow E, \omvec'\rightarrow\omvec,)N(\rvec,E',\omvec',t)d\omvec'dE',
-\end{align*}
- where $\Sigma_s(\rvec,E'\rightarrow E, \omvec'\rightarrow\omvec)$ is the macroscopic differential scattering cross section. Since the distribution function in the integrand of the outscattering term is independent of
- the integration variables, we can rewrite
-Outscattering as $\triangle \beta v\Sigma_s(\rvec,E)N(\rvec, E, \omvec,t).$
-Finally, we need to consider the internal source of particles. We
-quantify this source  by introducing the function $S(\rvec, E, \omvec, t)$
-such that the rate of introduction of particles into the cube is given by
-\begin{equation*}
-\textrm{Source} = S(\rvec,E,\omvec,t)\triangle \beta.
-\end{equation*}
-
- In order to build the transport equation, we sum these equations with appropriate signs
-for loss and gain, to the overall rate of change. Letting $\triangle \beta$ approach a differential
-element and canceling it, we obtain
-\begin{align}
-\frac{\partial N}{\partial t} =& -\left[\frac{\partial (\dot x N)}{\partial x} +
-\frac{\partial (\dot y N)}{\partial y}+\frac{\partial (\dot z N)}{\partial z} +
-\frac{\partial (\dot E N)}{\partial E}+\frac{\partial (\dot \mu N)}{\partial \mu}+
-\frac{\partial (\dot \psi N)}{\partial \overline\psi}\right] 
-\\ & \quad - v\Sigma_a(\rvec,E)N \nonumber
- \\& \quad\quad\quad   + 
-\int_0^{\infty}\int_{4\pi}v'\Sigma_s(\rvec, E'\rightarrow E,\omvec'\rightarrow\omvec)N(\rvec,E',\omvec',t) d\omvec'dE'\nonumber 
-\\& \quad\quad\quad\quad\quad\quad -\int_0^{\infty}\int_{4\pi}v\Sigma_s(\rvec, E\rightarrow E',\omvec\rightarrow\omvec')N(\rvec,E,\omvec,t) d\omvec'dE'\nonumber
-\\& \quad\quad\quad\quad\quad\quad\quad\quad\quad
-+S(\rvec,E,\omvec,t),\nonumber
-\end{align}
- where $N = N(\rvec,E,\omvec,t)$. Since particles travel in a straight line
-between collisions, \linebreak
-$\dot \mu = \dot \psi = 0$. Furthermore, $\dot E = 0$ because particles stream
-with no change in energy. Finally, performing the outscattering integral:
-\begin{align}
-&\frac{1}{v}\frac{\partial \psi}{\partial t}(\rvec,E,\omvec,t) + \omvec\cdot  \nabla \psi(\rvec,E,\omvec,t) +
- \Sigma_t(\rvec,E)\psi(\rvec,E,\omvec,t)
-\\& \quad =
-\int_0^{\infty}\int_{4\pi}\Sigma_s(\rvec, E'\rightarrow E,\omvec'\rightarrow\omvec)
-\psi(\rvec,E',\omvec',t)d\omvec'dE'+S(\rvec, E, \omvec,t) \nonumber.
-\end{align}
-
-We can easily generalize this equation to include nuclear fission.
-To do that, we must revisit our treatment of $\Sigma_a$; as we have mentioned, there are two main processes responsible for the absorption of particles in the system: \textit{radiative capture} and \textit{nuclear fission}. Now, we define
-\begin{align*}
-\Sigma_\gamma(\rvec,E)ds = \textrm{probability of capture}
-\end{align*}
-and
-\begin{align*}
-\Sigma_f(\rvec,E)ds = \textrm{probability of a fission event},
-\end{align*}
-such that
-\begin{align*}
-\Sigma_a(\rvec,E) = \Sigma_\gamma(\rvec,E) + \Sigma_f(\rvec,E)\,.
-\end{align*}
-
-While a captured neutron is simply removed from the system, a neutron with energy $E$ that induces a fission event causes the target nucleus to split into two smaller daughter nuclei, and 
-\begin{align*}
-\nu(E) = \textrm{the mean number of fission neutrons that are released}\,.
-\end{align*}
-Of this number, $\nu(E)[1-M(E)]$ are \textit{prompt} fission neutrons (being emitted within $10^{-15}$ seconds of the fission event). These fission neutrons are emitted isotropically, with an energy distribution given by the fission spectrum $\chi_p(E)$. Also, $\nu(E)M(E)$ \textit{delayed} fission neutrons (being released roughly 0.1 to 60 seconds after the fission event) are created; a delayed neutron is produced when a radioactive daughter nucleus undergoes a radioactive decay process in which a neutron is emitted. 
-
-Assuming (for simplicity) that the number of delayed neutrons emitted by fission is very small [$M(E)<<1$], we can neglect the delayed neutron terms and rewrite
-the transport equation as
-\begin{align}
-&\frac{1}{v}\frac{\partial \psi}{\partial t}(\rvec,E,\omvec,t) + \omvec\cdot  \nabla \psi(\rvec,E,\omvec,t) +
- \Sigma_t(\rvec,E)\psi(\rvec,E,\omvec,t) 
-\\& \quad\quad\quad\quad =
-\int_0^{\infty}\int_{4\pi}\Sigma_s(\rvec, E'\rightarrow E,\omvec'\rightarrow\omvec)
-\psi(\rvec,E',\omvec',t)d\omvec'dE'\nonumber
-\\&\quad\quad\quad\quad\quad\quad +\frac{\chi_p(E)}{4\pi}\int_0^{\infty}\int_{4\pi}\nu(E')\Sigma_f(\rvec,E')
-\psi(\rvec,E',\omvec',t)d\omvec'dE'\nonumber
-\\&\quad\quad\quad\quad\quad\quad\quad\quad+S(\rvec, E, \omvec,t) \nonumber.
-\end{align}
-   
-These equations require both spatial and temporal boundary conditions.
-Assuming that the
-physical
-system of interest is nonreentrant (convex) and characterized by a
-volume $V$, it is sufficient to specify the flux of
-particles at all points of the bounding surface of the system in the incoming
-directions. This implies
-\begin{align*}
-\psi(\rvec_s, E,\omvec,t) &= \psi_b(\rvec_s,E,\omvec,t)\,, \hspace{0.5 cm} \textbf{n} \cdot \omvec <0,
-\end{align*}
- where $\psi_b$ is a specified function at the boundary, $\rvec_s$ is a point on the surface, and $\textbf{n}$ is the unit
-outward normal vector at this point. In the time variable, we assume the range of
-interest $0\leq t<\infty$ and specify the
-initial condition at $t=0$, such that
-\begin{align*}
-\psi(\rvec,E,\omvec,0) = \psi_0(\rvec,E,\omvec),
-\end{align*}
- where $\psi_0$ is a specified function.
- 
-It is common to make extra assumptions in order to obtain a simpler version of these equations. For instance, in the case of time-independent, monoenergetic particle transport in a homogeneous medium with a known interior isotropic source:
-\begin{align*}
-\omvec\cdot  \nabla \psi(\rvec,\omvec) +
- \Sigma_t\psi(\rvec,\omvec)
-=
-\int_{4\pi}\Sigma_s(\omvec'\rightarrow\omvec)
-\psi(\rvec,\omvec')d\omvec'+\frac{S(\rvec)}{4\pi}\,,
-\end{align*}
-and 
-\begin{align*}
-\omvec\cdot  \nabla \psi(\rvec,\omvec) +
- \Sigma_t\psi(\rvec,\omvec)%\\&
- &=
-\int_{4\pi}\Sigma_s(\omvec'\rightarrow\omvec)
-\psi(\rvec,\omvec')d\omvec'\\&\quad\quad\quad\quad\quad\quad
- +\frac{\nu\Sigma_f}{4\pi}\int_{4\pi}
-\psi(\rvec,\omvec')d\omvec'+\frac{S(\rvec)}{4\pi}\,.\nonumber
-\end{align*}
-Both the equations above need a spatial boundary condition, which is given by
-\begin{align*}
-\psi(\rvec_s,\omvec) = \psi_b(\rvec_s,\omvec)\,, \hspace{0.5 cm} \textbf{n} \cdot \omvec <0\,.
-\end{align*}
-
-In steady-state reactor calculations, one often sees a version of these equations in which the inhomogeneous source $S(\rvec)$ and the boundary source $\psi_b(\rvec_s,\omvec)$ are set to zero, and the fission source is modified by a constant factor $1/k$:
-\begin{align*}
-&\omvec\cdot  \nabla \psi(\rvec,\omvec) +
- \Sigma_t\psi(\rvec,\omvec)%\\&
- =
-\int_{4\pi}\Sigma_s(\omvec'\rightarrow\omvec)
-\psi(\rvec,\omvec')d\omvec'\\&\quad\quad\quad\quad\quad\quad\quad\quad\quad\quad\quad\quad\quad\quad\quad\quad\quad\quad
- +\frac{\nu\Sigma_f}{4\pi k}\int_{4\pi}
-\psi(\rvec,\omvec')d\omvec'\,,\nonumber\\
-&\psi(\rvec_s,\omvec) = 0, \hspace{0.5 cm} \textbf{n} \cdot \omvec <0\,.
-\end{align*}
-These equations always have the zero solution $\psi = 0$; the goal is to find the largest value of $k$ such that a nonzero solution $\psi$ exists. The resulting $k$ is called the \textit{criticality} (or \textit{criticality eigenvalue}) of the system. If a system has a fissile region, it can be shown that $k$ always exists, and the corresponding (eigenfunction) $\psi$ is unique and positive.
 
 
 \end{document}
