adding alternate te der; updated gitignore so we include pdfs.

--- a/03-te/diff-vol-te.tex
+++ b/03-te/diff-vol-te.tex
@@ -43,9 +43,8 @@
 %---------------------------------------------------------------------------
 \begin{document}
 \begin{center}
-{\bf NE 155, S16 \\
-Definitions and Neutron Transport\\
-January 27, 2015}
+{\bf NE 250, F17 \\
+Alternative Derivation for Transport Equation}
 \end{center}
 
 \setlength{\unitlength}{1in}
@@ -57,7 +56,7 @@ January 27, 2015}
 
 \begin{figure}[h!]
     \begin{center}
-    \includegraphics[keepaspectratio, width = 2.7 in]{phase_space}
+    \includegraphics[keepaspectratio, width = 2.7 in]{../figs/phase-space}
     \end{center}
     \caption{Schematic of Phase Space}
     \label{fig:phase_space}
